--- a/src/components/globals/backgroundSection.css
+++ b/src/components/globals/backgroundSection.css
@@ -2,11 +2,12 @@ div {
   color: white;
 }
 
-/* this h2 tags causes issues with gatsby-background-image */
-h2 {
-  display: flex;
+.wrapperDiv {
+  display: flex !important;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   position: relative;
+  top: 50%;
+  font-size: 2em;
 }
