--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Saira+Condensed:400,600,700&display=swap");
+
+body {
+  font-family: "Saira Condensed", sans-serif !important;
+}
+
 svg {
   color: white;
 }
